# python-project-52

./: .gitignore  Makefile  Procfile  README.md  makefile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: test-cov.yml
task_manager/: __init__.py  admin.py  forms.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/auth/: forms.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  test_labels.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labelmodel_name.py  0003_alter_labelmodel_created_at.py  0004_alter_labelmodel_name.py
task_manager/migrations/: 0001_initial.py  0002_userstr_delete_user.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statusmodel_name.py  0003_alter_statusmodel_created_at.py  0004_alter_statusmodel_created_at.py  0005_alter_statusmodel_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_taskmodel_author_alter_taskmodel_description_and_more.py  0002_alter_taskmodel_author_alter_taskmodel_executor.py  0002_taskmodel_description.py  0003_alter_taskmodel_description.py  0003_alter_taskmodel_name.py  0004_alter_taskmodel_description.py  0004_alter_taskmodel_labels.py  (+1 more)
task_manager/templates/: CreationPage.html  DeletePage.html  PageWithAll.html  UpdatePage.html  base.html  index.html
task_manager/tests/: test_auth.py  test_labels.py  test_statuses.py  test_tasks.py  utils.py
(+30 files in other folders)
